codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_side_requests_forked_side_question_while_task_running.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 343
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask 云熙 to do anything                                                       " Hidden by multi-width symbols: [(7, " "), (9, " ")]
"                                                                                "
"  deepseek-v4-pro default                                     Side starting...  "
